--- a/css/globals.css
+++ b/css/globals.css
@@ -6,3 +6,38 @@ body {
 a {
     text-decoration: none;
 }
+main {
+  margin: 60px 0;
+}
+
+.u-default-box {
+  width: 100%;
+  max-width: 600px;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, .0975);
+  border-radius: 3px;
+}
+
+.global_profile_img {
+    width: 56px;
+    height: 56px;
+
+    border-radius: 50%;
+}
+
+.global_profile_font_style_1 {
+    font-size: 14px;
+    font-weight: bold;
+    color: #262626;
+
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.global_profile_font_style_2 {
+    font-size: 14px;
+    color: #262626;
+
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
