--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,6 @@
 @import 'globals.css';
 @import 'login.css';
 @import 'footer.css';
+@import 'navigation.css';
+@import 'explore.css';
+@import 'feed.css';
