--- a/css/explore.css
+++ b/css/explore.css
@@ -70,7 +70,15 @@
     margin-bottom: 2px;
 }
 
-.follow_button {
+.explore_list_item_info_image img{
+    transition: all .5s ease-in-out;
+}
+
+.explore_list_item_info_image img:hover {
+    transform: scale(1.5,1.5);
+}
+
+.follow_button button{
     background-color: #3897f0;
     color: white;
     font-size: 14px;
@@ -78,12 +86,23 @@
     width: 64px;
     height: 28px;
 
+    border:0;
+
     display: flex;
     align-items: center;
     justify-content: center;
 
     border-radius: 3px;
     margin: 22px 16px 22px 0;
+
+    transition: all .5s ease-in-out;
+}
+
+.follow_button button:hover {
+    background: white;
+    color: #3897f0;
+
+    border: 1px solid #3897f0;
 }
 
 .follow_button button:focus {
