--- a/css/globals.css
+++ b/css/globals.css
@@ -41,3 +41,19 @@ main {
     margin-top: 2px;
     margin-bottom: 2px;
 }
+
+main {
+  margin: 60px 0;
+  animation: .5s popIn ease-out;
+}
+
+@keyframes popIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
