--- a/css/navigation.css
+++ b/css/navigation.css
@@ -15,6 +15,21 @@
     margin: auto;
 }
 
+.navigation_box a img{
+    animation: 2s logo_animation ease-in-out;
+}
+
+
+
+@keyframes logo_animation {
+    to{
+        transform:none;
+    }
+    from{
+        transform:rotateY(360deg);
+    }
+}
+
 .navigation input {
   width: 215px;
   box-sizing: border-box;
@@ -41,6 +56,36 @@
   color: rgba(0, 0, 0, 0.5);
   text-align: right;
   margin-left: 20px;
+
+    animation: .5s drop ease-out forwards;
+  opacity: 0;
+}
+
+.navigation_links .navigation_link:nth-child(2) {
+    animation-delay: 0.5s;
+}
+
+.navigation_links .navigation_link:last-child {
+    animation-delay: 1.0s;
+}
+
+@keyframes drop {
+    from {
+        transform: translateY( -10px);
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.navigation_links i {
+    transition: all .1s ease-in-out;
+}
+
+.navigation_links i:hover{
+    color: #3897f0;
+    transform: scale(1.1,1.1);
 }
 
 @media only screen and (max-width: 600px) {
